SubBt/force-app/main/default/objects/Project__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>The Active field helps you control your reports.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>