SubBt/force-app/main/default/objects/Project__c/fields/Actual_Start__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start__c</fullName>
    <inlineHelpText>Date the the Project actually kicked off.</inlineHelpText>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>