SubBt/force-app/main/default/objects/Project__c/fields/Anticipated_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Start_Date__c</fullName>
    <inlineHelpText>The date the Project is anticipated to start.  This date is actually driven by the first task on the schedule.</inlineHelpText>
    <label>Anticipated Start Date</label>
    <type>Date</type>
</CustomField>