SubBt/force-app/main/default/objects/Project__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <inlineHelpText>Date the Contract was accepted by the customer.</inlineHelpText>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>