SubBt/force-app/main/default/objects/Project__c/fields/Are_there_any_pets__c.field-meta.xml
<CustomField>
    <fullName>Are_there_any_pets__c</fullName>
    <label>Are there any pets?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>