SubBt/force-app/main/default/objects/Project__c/fields/Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <inlineHelpText>This number is automatically generated by the system.  It cannot be changed or updated.</inlineHelpText>
    <label>Project #</label>
    <type>AutoNumber</type>
</CustomField>