SubBt/force-app/main/default/objects/Project__c/fields/Basement__c.field-meta.xml
<CustomField>
    <fullName>Basement__c</fullName>
    <label>Basement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>