SubBt/force-app/main/default/objects/Project__c/fields/Bathrooms__c.field-meta.xml
<CustomField>
    <fullName>Bathrooms__c</fullName>
    <label>Bathrooms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>