SubBt/force-app/main/default/objects/Project__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gap Factory Store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>