SubBt/force-app/main/default/objects/Project__c/fields/Can_we_park_in_driveway__c.field-meta.xml
<CustomField>
    <fullName>Can_we_park_in_driveway__c</fullName>
    <label>Can we park in driveway?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>