SubBt/force-app/main/default/objects/Project__c/fields/Can_we_park_on_the_street__c.field-meta.xml
<CustomField>
    <fullName>Can_we_park_on_the_street__c</fullName>
    <label>Can we park on the street?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>