SubBt/force-app/main/default/objects/Project__c/fields/Can_we_pile_garbage_on_property__c.field-meta.xml
<CustomField>
    <fullName>Can_we_pile_garbage_on_property__c</fullName>
    <label>Can we pile garbage on property?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>