SubBt/force-app/main/default/objects/Project__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abilene</fullName>
            </value>
            <value>
                <fullName>Akron</fullName>
            </value>
            <value>
                <fullName>Albuquerque</fullName>
            </value>
            <value>
                <fullName>Alexandria</fullName>
            </value>
            <value>
                <fullName>Allen</fullName>
            </value>
            <value>
                <fullName>Allentown</fullName>
            </value>
            <value>
                <fullName>Amarillo</fullName>
            </value>
            <value>
                <fullName>Anaheim</fullName>
            </value>
            <value>
                <fullName>Anchorage</fullName>
            </value>
            <value>
                <fullName>Ann Arbor</fullName>
            </value>
            <value>
                <fullName>Antioch</fullName>
            </value>
            <value>
                <fullName>Arlington</fullName>
            </value>
            <value>
                <fullName>Arvada</fullName>
            </value>
            <value>
                <fullName>Athens</fullName>
            </value>
            <value>
                <fullName>Atlanta</fullName>
            </value>
            <value>
                <fullName>Augusta</fullName>
            </value>
            <value>
                <fullName>Aurora</fullName>
            </value>
            <value>
                <fullName>Austin</fullName>
            </value>
            <value>
                <fullName>Bakersfield</fullName>
            </value>
            <value>
                <fullName>Baltimore</fullName>
            </value>
            <value>
                <fullName>Baton Rouge</fullName>
            </value>
            <value>
                <fullName>Beaumont</fullName>
            </value>
            <value>
                <fullName>Bellevue</fullName>
            </value>
            <value>
                <fullName>Bend</fullName>
            </value>
            <value>
                <fullName>Berkeley</fullName>
            </value>
            <value>
                <fullName>Billings</fullName>
            </value>
            <value>
                <fullName>Birmingham</fullName>
            </value>
            <value>
                <fullName>Blue Springs</fullName>
            </value>
            <value>
                <fullName>Boise</fullName>
            </value>
            <value>
                <fullName>Boston</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>