SubBt/force-app/main/default/objects/Project__c/fields/City_Text__c.field-meta.xml
<CustomField>
    <fullName>City_Text__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>