SubBt/force-app/main/default/objects/Project__c/fields/Code_and_contact_info_for_alarm_system__c.field-meta.xml
<CustomField>
    <fullName>Code_and_contact_info_for_alarm_system__c</fullName>
    <label>Code and contact info for alarm system?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>