SubBt/force-app/main/default/objects/Project__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <label>Community</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Foxtail</fullName>
            </value>
            <value>
                <fullName>Trails</fullName>
            </value>
            <value>
                <fullName>Warbler Woods at RiverBend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>