SubBt/force-app/main/default/objects/Project__c/fields/Contingency__c.field-meta.xml
<CustomField>
    <fullName>Contingency__c</fullName>
    <label>Contingency %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>