SubBt/force-app/main/default/objects/Project__c/fields/Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contract_Amount__c</fullName>
    <inlineHelpText>Sum of all Approved Prime Contracts for this Project.</inlineHelpText>
    <label>Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>