SubBt/force-app/main/default/objects/Project__c/fields/Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Date__c</fullName>
    <inlineHelpText>Date the Contract was Signed.</inlineHelpText>
    <label>Contract Signed Date</label>
    <type>Date</type>
</CustomField>