SubBt/force-app/main/default/objects/Project__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alameda</fullName>
            </value>
            <value>
                <fullName>Allegheny</fullName>
            </value>
            <value>
                <fullName>Baltimore</fullName>
            </value>
            <value>
                <fullName>Bergen</fullName>
            </value>
            <value>
                <fullName>Bernalillo</fullName>
            </value>
            <value>
                <fullName>Bexar</fullName>
            </value>
            <value>
                <fullName>Bronx</fullName>
            </value>
            <value>
                <fullName>Broward</fullName>
            </value>
            <value>
                <fullName>Clark</fullName>
            </value>
            <value>
                <fullName>Cobb</fullName>
            </value>
            <value>
                <fullName>Collin</fullName>
            </value>
            <value>
                <fullName>Contra Costa</fullName>
            </value>
            <value>
                <fullName>Cook</fullName>
            </value>
            <value>
                <fullName>Cuyahoga</fullName>
            </value>
            <value>
                <fullName>Dallas</fullName>
            </value>
            <value>
                <fullName>Davidson</fullName>
            </value>
            <value>
                <fullName>DeKalb</fullName>
            </value>
            <value>
                <fullName>Denton</fullName>
            </value>
            <value>
                <fullName>Denver</fullName>
            </value>
            <value>
                <fullName>DuPage</fullName>
            </value>
            <value>
                <fullName>Duval</fullName>
            </value>
            <value>
                <fullName>El Paso</fullName>
            </value>
            <value>
                <fullName>Erie</fullName>
            </value>
            <value>
                <fullName>Essex</fullName>
            </value>
            <value>
                <fullName>Fairfax</fullName>
            </value>
            <value>
                <fullName>Fairfield</fullName>
            </value>
            <value>
                <fullName>Fort Bend</fullName>
            </value>
            <value>
                <fullName>Franklin</fullName>
            </value>
            <value>
                <fullName>Fresno</fullName>
            </value>
            <value>
                <fullName>Fulton</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>