SubBt/force-app/main/default/objects/Project__c/fields/Days_Since_Project_Started__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Project_Started__c</fullName>
    <formula>TODAY()- Original_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Project Started</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>