SubBt/force-app/main/default/objects/Project__c/fields/Days_Since_Project_was_Created__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Project_was_Created__c</fullName>
    <formula>TODAY() -   DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Project was Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>