SubBt/force-app/main/default/objects/Project__c/fields/Deposit_1__c.field-meta.xml
<CustomField>
    <fullName>Deposit_1__c</fullName>
    <label>Deposit 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>