SubBt/force-app/main/default/objects/Project__c/fields/Deposit_2__c.field-meta.xml
<CustomField>
    <fullName>Deposit_2__c</fullName>
    <label>Deposit 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>