SubBt/force-app/main/default/objects/Project__c/fields/ERP_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Id__c</fullName>
    <inlineHelpText>This field can be used to tie back to an external ERP or Accounting system.</inlineHelpText>
    <label>ERP/Accounting Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>