SubBt/force-app/main/default/objects/Project__c/fields/Estimated_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Date__c</fullName>
    <inlineHelpText>The date the Project is Estimated to complete.   This date is actually driven by the last task on the schedule.</inlineHelpText>
    <label>Anticipated Completion Date</label>
    <type>Date</type>
</CustomField>