SubBt/force-app/main/default/objects/Project__c/fields/Estimator__c.field-meta.xml
<CustomField>
    <fullName>Estimator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Resource that has done the estimating for this project.</inlineHelpText>
    <label>Estimator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Estimator)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>