SubBt/force-app/main/default/objects/Project__c/fields/Finish__c.field-meta.xml
<CustomField>
    <fullName>Finish__c</fullName>
    <label>Finish</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nickle</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>