SubBt/force-app/main/default/objects/Project__c/fields/Firm_Date__c.field-meta.xml
<CustomField>
    <fullName>Firm_Date__c</fullName>
    <inlineHelpText>The Firm Date can be used for many different conditions.</inlineHelpText>
    <label>Firm Date</label>
    <type>Date</type>
</CustomField>