SubBt/force-app/main/default/objects/Project__c/fields/Foundation__c.field-meta.xml
<CustomField>
    <fullName>Foundation__c</fullName>
    <label>Foundation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Slab</fullName>
            </value>
            <value>
                <fullName>Crawlspace</fullName>
            </value>
            <value>
                <fullName>Basement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>