SubBt/force-app/main/default/objects/Project__c/fields/Gabel__c.field-meta.xml
<CustomField>
    <fullName>Gabel__c</fullName>
    <label>Gable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Board &amp; Batten</fullName>
            </value>
            <value>
                <fullName>Shake</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>