SubBt/force-app/main/default/objects/Project__c/fields/Garage__c.field-meta.xml
<CustomField>
    <fullName>Garage__c</fullName>
    <label>Garage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Bay</fullName>
            </value>
            <value>
                <fullName>Extended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>