SubBt/force-app/main/default/objects/Project__c/fields/Garage_Side__c.field-meta.xml
<CustomField>
    <fullName>Garage_Side__c</fullName>
    <label>Garage Side</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>