SubBt/force-app/main/default/objects/Project__c/fields/GC_Markup__c.field-meta.xml
<CustomField>
    <fullName>GC_Markup__c</fullName>
    <label>GC Markup %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>