SubBt/force-app/main/default/objects/Project__c/fields/Is_smoke_detector_connected_to_alarm__c.field-meta.xml
<CustomField>
    <fullName>Is_smoke_detector_connected_to_alarm__c</fullName>
    <label>Is smoke detector connected to alarm?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>