SubBt/force-app/main/default/objects/Project__c/fields/Is_smoke_detector_hard_wired__c.field-meta.xml
<CustomField>
    <fullName>Is_smoke_detector_hard_wired__c</fullName>
    <label>Is smoke detector hard wired?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>