SubBt/force-app/main/default/objects/Project__c/fields/Is_there_an_alarm_system__c.field-meta.xml
<CustomField>
    <fullName>Is_there_an_alarm_system__c</fullName>
    <label>Is there an alarm system?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>