SubBt/force-app/main/default/objects/Project__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <formula>TEXT(Geolocation__Latitude__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latitude</label>
    <type>Text</type>
</CustomField>