SubBt/force-app/main/default/objects/Project__c/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Street</fullName>
            </value>
            <value>
                <fullName>Kiosk</fullName>
            </value>
            <value>
                <fullName>Mall</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>