SubBt/force-app/main/default/objects/Project__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <formula>TEXT(Geolocation__Longitude__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Longitude</label>
    <type>Text</type>
</CustomField>