SubBt/force-app/main/default/objects/Project__c/fields/Master_Project__c.field-meta.xml
<CustomField>
    <fullName>Master_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Selecting a Master Project and Saving the Project will pull in all the details from the Master Project.  This will save you time manually import all of the Master Project information.</inlineHelpText>
    <label>Master Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project__c.Type__c</field>
            <operation>equals</operation>
            <value>Master</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>