SubBt/force-app/main/default/objects/Project__c/fields/Model_Elevation__c.field-meta.xml
<CustomField>
    <fullName>Model_Elevation__c</fullName>
    <label>Model/Elevation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>50OS-2038E-Balsam E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>