SubBt/force-app/main/default/objects/Project__c/fields/Original_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_End_Date__c</fullName>
    <inlineHelpText>The original end date of the project, prior to any scheduling modifications.</inlineHelpText>
    <label>Original Completion Date</label>
    <type>Date</type>
</CustomField>