SubBt/force-app/main/default/objects/Project__c/fields/Original_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Start_Date__c</fullName>
    <inlineHelpText>The original start date of the project, prior to any scheduling modifications.</inlineHelpText>
    <label>Original Start Date</label>
    <type>Date</type>
</CustomField>