SubBt/force-app/main/default/objects/Project__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <label>Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type C</fullName>
            </value>
            <value>
                <fullName>Bighorn</fullName>
            </value>
            <value>
                <fullName>Boulder</fullName>
            </value>
            <value>
                <fullName>Deschutes</fullName>
            </value>
            <value>
                <fullName>Gallatin</fullName>
            </value>
            <value>
                <fullName>Type A</fullName>
                <isActive>false</isActive>
                <label>Type A</label>
            </value>
            <value>
                <fullName>Type B</fullName>
                <isActive>false</isActive>
                <label>Type B</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>