SubBt/force-app/main/default/objects/Project__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <inlineHelpText>This field is used when creating a new Listing record.</inlineHelpText>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>