SubBt/force-app/main/default/objects/Project__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <inlineHelpText>Standard text to tie back to PO&apos;s, Invoices, etc...</inlineHelpText>
    <label>Project #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>