SubBt/force-app/main/default/objects/Project__c/fields/Project_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Completion_Date__c</fullName>
    <label>Project Completion Date</label>
    <type>Date</type>
</CustomField>