SubBt/force-app/main/default/objects/Project__c/fields/Project_File__c.field-meta.xml
<CustomField>
    <fullName>Project_File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project File</label>
    <referenceTo>Common_Files__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>