SubBt/force-app/main/default/objects/Project__c/fields/Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Id__c</fullName>
    <inlineHelpText>This Id is used for internal tracking.</inlineHelpText>
    <label>Project Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>